frontend/tests/errors/ER-033/vector_matrix_shape_mismatch/test.vx
// @rfc: docs/vexel-rfc.md#types
// @desc: Plain arithmetic operators do not accept array operands. | Array operands require per-element dotted operators

&^main() -> #i32 {
  a:#i32[2] = [1, 2];
  b:#i32[2] = [3, 4];
  c:#i32 = a * b;
  0
}
